fixed alignment issues with social media buttons

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -16,6 +16,7 @@ body {
   font-family: $font-family;
   color: #333;
 }
+.clear { clear: both; }
 .padhalfem { padding-top: .5em; }
 .pad2em { padding-top: 2em; }
 .top_bar {
